--- a/mygame.css
+++ b/mygame.css
@@ -1,14 +1,10 @@
-body {
-  background-color: "gray";
-}
-
 * {
   padding: 0;
   margin: 0;
 }
 
 canvas {
-  background: #eee;
+  background: pink;
   display: block;
   margin: 50;
 }
