Neighbours not generated across the field

--- a/mygame.css
+++ b/mygame.css
@@ -4,7 +4,10 @@
 }
 
 canvas {
-  background: pink;
-  display: block;
-  margin: 50;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
