--- a/mygame.css
+++ b/mygame.css
@@ -1,6 +1,9 @@
+body {
+  background-color: grey;
+}
+
 * {
   padding: 0;
-  margin: 0;
 }
 
 canvas {
@@ -9,5 +12,6 @@ canvas {
   bottom: 0;
   left: 0;
   right: 0;
+  padding-top: 500;
   margin: auto;
 }
